2006-04-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/iphlpapi.h (GetAdaptersAddresses): Check for winsock2
	here also.

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wincrypt.h (PROV_MS_EXCHANGE): Define.
	We should probably remove PROV_MS_MAIL but I'm keeping it for
	now for compatibility reasons.
	Thanks to:    Marcus Agehall <agehall at users dot sf dot net>

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/commdlg.h [WINVER >= 0x0500]
	(PD_RESULT_*,START_PAGE_GENERAL): Define.
	Thanks to:    Wolfgang Glas <softadm at users dot sf dot net>

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h [WINVER >= 0x0410]
	(AlphaBlend,GradientFill,TransparentBlt): Windows 98 and better.
	Thanks to:    Alessandro Antonello <aleantonello at users dot sf dot net>

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h (CAPTUREBLT,NOMIRRORBITMAP): Define.
	* include/commctrl.h (WC_LINK{AW},LIF_*,LIM_*,LM_*,
	MAX_LINKID_TEXT,L_MAX_URL_LENGTH): Define.
	(LITEM,LHITTESTINFO,NMLINK): Add structures.
	Thanks to:    Brandon Sneed <brandon at redf dot net>

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (IE*): Define for recent versions of IE.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (_W32API_H): Define.
	Define in addition to _W32API_H_, this is the w32api standard.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (WindowsVista): Define.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iptypes.h (IP_ADAPTER_*): Define parts that depend
	on SOCKET_ADDRESS only if winsock2.h has already been included.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (WM_IME_*): Remove. Defined in imm.h.
