@@ -139,30 +139,36 @@ extern "C" {
 #define FR_REPLACEALL 32
 #define FR_SHOWHELP 128
 #define FR_WHOLEWORD 2
-#define PD_ALLPAGES	0
-#define PD_SELECTION	1
-#define PD_PAGENUMS	2
-#define PD_NOSELECTION	4
-#define PD_NOPAGENUMS	8
-#define PD_COLLATE	16
-#define PD_PRINTTOFILE	32
-#define PD_PRINTSETUP	64
-#define PD_NOWARNING	128
-#define PD_RETURNDC	256
-#define PD_RETURNIC	512
-#define PD_RETURNDEFAULT	1024
-#define PD_SHOWHELP	2048
-#define PD_ENABLEPRINTHOOK	4096
-#define PD_ENABLESETUPHOOK	8192
-#define PD_ENABLEPRINTTEMPLATE	16384
-#define PD_ENABLESETUPTEMPLATE 32768
-#define PD_ENABLEPRINTTEMPLATEHANDLE 65536
-#define PD_ENABLESETUPTEMPLATEHANDLE 0x20000
-#define PD_USEDEVMODECOPIES	0x40000
-#define PD_USEDEVMODECOPIESANDCOLLATE	0x40000
-#define PD_DISABLEPRINTTOFILE	0x80000
-#define PD_HIDEPRINTTOFILE	0x100000
-#define PD_NONETWORKBUTTON	0x200000
+#define PD_ALLPAGES	0x00000000
+#define PD_SELECTION	0x00000001
+#define PD_PAGENUMS	0x00000002
+#define PD_NOSELECTION	0x00000004
+#define PD_NOPAGENUMS	0x00000008
+#define PD_COLLATE	0x00000010
+#define PD_PRINTTOFILE	0x00000020
+#define PD_PRINTSETUP	0x00000040
+#define PD_NOWARNING	0x00000080
+#define PD_RETURNDC	0x00000100
+#define PD_RETURNIC	0x00000200
+#define PD_RETURNDEFAULT	0x00000400
+#define PD_SHOWHELP	0x00000800
+#define PD_ENABLEPRINTHOOK	0x00001000
+#define PD_ENABLESETUPHOOK	0x00002000
+#define PD_ENABLEPRINTTEMPLATE	0x00004000
+#define PD_ENABLESETUPTEMPLATE 0x00008000
+#define PD_ENABLEPRINTTEMPLATEHANDLE 0x00010000
+#define PD_ENABLESETUPTEMPLATEHANDLE 0x00020000
+#define PD_USEDEVMODECOPIES	0x00040000
+#define PD_USEDEVMODECOPIESANDCOLLATE	0x00040000
+#define PD_DISABLEPRINTTOFILE	0x00080000
+#define PD_HIDEPRINTTOFILE	0x00100000
+#define PD_NONETWORKBUTTON	0x00200000
+#if (_WIN32_WINNT >= 0x0500)
+#define PD_CURRENTPAGE	0x00400000
+#define PD_NOCURRENTPAGE	0x00800000
+#define PD_EXCLUSIONFLAGS	0x01000000 
+#define PD_USELARGETEMPLATE	0x10000000
+#endif
 #define PSD_DEFAULTMINMARGINS	0
 #define PSD_INWININIINTLMEASURE	0
 #define PSD_MINMARGINS	1
