@@ -1,3 +1,8 @@
+2006-04-11  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
+	* include/commdlg.h (PD_*): Define.
+	Thanks to:    Wolfgang Glas <softadm at users dot sf dot net>
+
 2006-04-08  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/iphlpapi.h (GetAdaptersAddresses): Check for winsock2
